@@ -1,1 +1,0 @@
-	* add $graph like $bar, for net and cpu and whatever else
